# SIGS_Design_Agent_Game_Demo

./: .cursorrules  .env.example  .gitignore  .tabnine.yml  .windsurfrules  AGENT.md  CLAUDE.md  README.md  start.bat  start.sh  stop.bat  stop.sh  开发规则.md
.github/: copilot-instructions.md
backend/: config.py  main.py  pyproject.toml
backend/api/: deps.py  design.py  stats.py
backend/database/: connection.py  models.py  serve.py
backend/middleware/: auth.py  error_handler.py
backend/schemas/: design.py  session.py
backend/services/: agent_service.py  comment_service.py  design_service.py  image_service.py  like_service.py  model3d_service.py  session_service.py
doc/: 00_文档存放规则.md  INDEX.md  项目代码报告.md
doc/01_architecture/: 技术路线.md  框架执行逻辑.md
doc/02_product/: 游戏交互设计.md
doc/04_plans/: 代码审查与改进计划_2026-04-23.md  功能补全计划_2026-04-23.md  工作计划_2026-04-23.md
engine/: engine.css  index.js
engine/buildings/: building-factory.js  building-presets.js  campus-layout.js
engine/capture/: screenshot.js
engine/core/: camera-controller.js  ground.js  lighting.js  scene.js
engine/environment/: atmosphere.js  vegetation.js
engine/interaction/: marker-system.js  raycaster.js  tooltip.js
engine/utils/: color-palette.js  coordinate.js  event-bus.js
frontend/: index.html  package.json
frontend/css/: components.css  layout.css  loading.css  reset.css  variables.css
frontend/js/: api.js  config.js  router.js  state.js  utils.js
frontend/pages/: confirm.html  create.html  debug-explore.html  explore.html  gallery.html  generate.html  (+2 more)
test/: conftest.py
(+9 files in other folders)
